# litany

./: README.md  pyproject.toml
src/litany/: metainfo.py
src/litany/bencode/: error_check.py  parser.py  util.py
tests/test_bencode/: test_error.py  test_parser.py  test_util.py
