[project]
name = "litany"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Jones",email = "sjones5516@floridapoly.edu"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "litany", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "coverage (>=7.13.5,<8.0.0)"
]

[tool.poetry.group.test]
optional = true
